Fix crash in Print Preview when doc has more than two pages. Patch by Eli Friedman<sharparrow1@yahoo.com>. b=362210 r=me sr=roc