layout/generic/nsPageFrame.cpp
@@ -97,8 +97,7 @@ NS_IMETHODIMP nsPageFrame::Reflow(nsPresContext*          aPresContext,
   NS_ASSERTION(nsLayoutAtoms::pageContentFrame == firstFrame->GetType(),
                "This frame isn't a pageContentFrame");
 
-  if (contentPage && GetPrevInFlow() &&
-      (GetStateBits() & NS_FRAME_IS_DIRTY)) {
+  if (contentPage && GetPrevInFlow() && !contentPage->GetFirstChild(nsnull)) {
 
     nsPageFrame*        prevPage        = NS_STATIC_CAST(nsPageFrame*, GetPrevInFlow());
     nsPageContentFrame* prevContentPage = NS_STATIC_CAST(nsPageContentFrame*, prevPage->mFrames.FirstChild());
